--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.background {
+    background: rgb(57, 49, 175);
+    background: linear-gradient(
+        140deg,
+        rgba(57, 49, 175, 1) 37%,
+        rgba(72, 69, 183, 1) 59%,
+        rgba(124, 142, 214, 1) 75%,
+        rgba(194, 241, 255, 1) 100%
+    );
+}
